--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "tsc && jest ./dist",
+    "coverage": "tsc && jest ./dist --coverage"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,10 @@
     "jest": "^29.7.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0"
+    "@faker-js/faker": "^8.2.0",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "typescript": "^5.2.2"
   }
 }
